fixing some display problems on mobile

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -67,7 +67,7 @@
   
   }
   
-  header {
+  /* header {
     background: #fff;
     padding: 1rem;
     color: rgba(0, 0, 0, 0.7);
@@ -77,7 +77,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    /* border-radius: 8px 8px 0px 0px; */
+    /* border-radius: 8px 8px 0px 0px; 
   }
   
   header h1 {
@@ -85,7 +85,7 @@
    text-align: center;
    font-weight: normal;
   
-  }
+  } */
   tbody {
       position: relative;
     top: 100px;
@@ -114,7 +114,8 @@
     text-align: center;
     position: relative;
     /* top: -12px; */
-    border-bottom: 1px solid transparent;
+    border-bottom: 1px solid rgb(209, 208, 208);
+    border-right: 1px solid rgb(209, 208, 208);
     
   }
   
@@ -237,7 +238,7 @@
   */
   
   
-  
+/*   
   td:hover:after {
     content: "+";
     vertical-align: middle;
@@ -293,7 +294,7 @@
   
   .icon:hover {
     color: red;
-  }
+  } */
 
 
 
